// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader[Base] should render correctly  1`] = `
<div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c-4ztqpz soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about compressed 1`] = `
<div>
  <div
    class="c-75io4b soui-cascader-wrapper c-4ztqpz soui-cascader-clearable c-yhvjwi soui-cascader-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper crzwrok soui-cascader-compressed-wrapper ceh4deg soui-cascader-multiple-result-wrapper cp2lmus soui-cascader-multiple-compressed-wrapper"
        >
          <span
            style="display: inline-flex;"
          >
            <div
              class="c-2nbjpw soui-cascader-tag c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
              style=""
            >
              <span
                class="c-eycf2v soui-tag-wrapper"
              >
                +7
              </span>
            </div>
            <noscript />
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-5091l4 soui-cascader-clear-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
            />
          </svg>
        </span>
        <span
          class="cuxbczs soui-cascader-compressed-icon c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about disabled 1`] = `
<div
  style="display: flex; flex-wrap: wrap; gap: 32px; width: 632px;"
>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c76msxt soui-cascader-wrapper-disabled"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c-4ztqpz soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c-75io4b soui-cascader-wrapper c76msxt soui-cascader-wrapper-disabled"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <div
            class="c-2nbjpw soui-cascader-tag c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright c1gztba soui-tag-disabled"
            data-soui-type="dark"
          >
            <span
              class="c-eycf2v soui-tag-wrapper c-2l12yl soui-tag-inline"
            >
              jiangsu
            </span>
          </div>
          <div
            class="c-2nbjpw soui-cascader-tag c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright c1gztba soui-tag-disabled"
            data-soui-type="dark"
          >
            <span
              class="c-eycf2v soui-tag-wrapper c-2l12yl soui-tag-inline"
            >
              nanjing
            </span>
          </div>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c-4ztqpz soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about filter 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="c-thjy85 soui-cascader-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="c-thjy85 soui-cascader-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about final 1`] = `
<div>
  <div
    class="c5k8ohz soui-form-item-wrapper"
    data-soui-status="default"
  >
    <div
      class="c7t8ga0 soui-form-item-label"
    >
      Single
    </div>
    <div
      class="c-535pv3 soui-form-item-control"
      data-soui-role="form-control"
    >
      <div
        class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper"
        data-soui-input-border="true"
      >
        <div
          class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="cxvfwnf soui-cascader-result"
          >
            <div
              class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
            >
              <input
                autocomplete="off"
                style="width: 100%;"
                value=""
              />
              <span
                class="c-thjy85 soui-cascader-input-mirror"
              />
            </div>
          </div>
          <div
            class="c-5m72ok soui-cascader-icon-wrapper"
          >
            <span
              class="c-yf43w soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c5k8ohz soui-form-item-wrapper"
    data-soui-status="default"
  >
    <div
      class="c7t8ga0 soui-form-item-label"
    >
      multiple
    </div>
    <div
      class="c-535pv3 soui-form-item-control"
      data-soui-role="form-control"
    >
      <div
        class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper"
        data-soui-input-border="true"
      >
        <div
          class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="cxvfwnf soui-cascader-result"
          >
            <div
              class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
            >
              <input
                autocomplete="off"
                style="width: 100%;"
                value=""
              />
              <span
                class="c-thjy85 soui-cascader-input-mirror"
              />
            </div>
          </div>
          <div
            class="c-5m72ok soui-cascader-icon-wrapper"
          >
            <span
              class="c-yf43w soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about finalDismiss 1`] = `
<div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about hideTag 1`] = `
<div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c-4ztqpz soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about innerTitle 1`] = `
<div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c-gqbz15 soui-cascader-wrapper-inner-title c-4ztqpz soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="c1tywhu soui-inner-title-wrapper"
      >
        <div
          class="ccvxbif soui-inner-title-title c9br610 soui-inner-title-top"
        >
          Inner Title
        </div>
        <div
          class="cctrnsm soui-inner-title-place"
        >
          <div
            class="ccvxbif soui-inner-title-title"
          >
            Inner Title
          </div>
        </div>
        <div
          class="c-8tfriw soui-inner-title-content"
        >
          <div
            class="cxvfwnf soui-cascader-result"
          >
            <div
              class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
            >
              <span
                class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
              >
                <span>
                  Please select city
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about loader 1`] = `
<div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about multiple 1`] = `
<div>
  <div
    class="c-oz42ng soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="csnjwq0 soui-radio-wrapper c-8nhvj5 soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cibap1r soui-radio-indicator-wrapper"
      >
        <span
          class="c-yp2wyk soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-q0fd44 soui-radio-desc"
      >
        模式 0
      </span>
    </div>
    <div
      class="csnjwq0 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cibap1r soui-radio-indicator-wrapper"
      >
        <span
          class="c-yp2wyk soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-q0fd44 soui-radio-desc"
      >
        模式 1
      </span>
    </div>
    <div
      class="csnjwq0 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cibap1r soui-radio-indicator-wrapper"
      >
        <span
          class="c-yp2wyk soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-q0fd44 soui-radio-desc"
      >
        模式 2
      </span>
    </div>
    <div
      class="csnjwq0 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cibap1r soui-radio-indicator-wrapper"
      >
        <span
          class="c-yp2wyk soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-q0fd44 soui-radio-desc"
      >
        模式 3
      </span>
    </div>
    <div
      class="csnjwq0 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cibap1r soui-radio-indicator-wrapper"
      >
        <span
          class="c-yp2wyk soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-q0fd44 soui-radio-desc"
      >
        模式 4
      </span>
    </div>
  </div>
  <div
    style="display: flex;"
  >
    <div
      style="flex: 1;"
    >
      <div
        class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c-4ztqpz soui-cascader-clearable c-yhvjwi soui-cascader-multiple"
        data-soui-input-border="true"
        style="width: 300px;"
        tabindex="0"
      >
        <div
          class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
        >
          <div
            class="cxvfwnf soui-cascader-result"
          >
            <div
              class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
            >
              <span
                class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
              >
                <span>
                  Please select city
                </span>
              </span>
            </div>
          </div>
          <div
            class="c-5m72ok soui-cascader-icon-wrapper"
          >
            <span
              class="c-yf43w soui-cascader-arrow-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <pre
      style="flex: 1; margin: 10px; background: rgb(29, 29, 29); color: rgb(148, 213, 252); border-radius: 4px; padding: 10px;"
    >
      <div
        style="margin-bottom: 10px;"
      >
        <code
          style="color: rgb(93, 142, 78);"
        >
          <span>
            /
          </span>
          <span>
            /
          </span>
           DataItem[]
        </code>
      </div>
      <code
        style="color: rgb(117, 117, 117);"
      >
        no data
      </code>
    </pre>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about noRepeat 1`] = `
<div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c-4ztqpz soui-cascader-clearable c-yhvjwi soui-cascader-multiple"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper crzwrok soui-cascader-compressed-wrapper ceh4deg soui-cascader-multiple-result-wrapper cp2lmus soui-cascader-multiple-compressed-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="cuxbczs soui-cascader-compressed-icon c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about renderResult 1`] = `
<div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper c-4ztqpz soui-cascader-clearable"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about trigger 1`] = `
<div>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <span
            class="c-bivzjv soui-cascader-placeholder csub7zz soui-cascader-ellipsis"
          >
            <span>
              Please select city
            </span>
          </span>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about unmatch 1`] = `
<div>
  <div
    class="c-75io4b soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
    tabindex="0"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <div
            class="c-2nbjpw soui-cascader-tag c-l0z5n4 soui-tag-tag c-fsj6i1 soui-tag-default c-5u77x8 soui-tag-bright"
          >
            <span
              class="c-eycf2v soui-tag-wrapper c-2l12yl soui-tag-inline"
            >
              Unmatched: shanghai
            </span>
          </div>
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader[Base] should render correctly about wide 1`] = `
<div
  style="display: flex; gap: 32px;"
>
  <div
    class="c3wd8fc soui-cascader-wrapper-empty c-75io4b soui-cascader-wrapper"
    data-soui-input-border="true"
    style="width: 300px;"
  >
    <div
      class="cr29iiw soui-cascader-result-wrapper c-soss75 soui-cascader-wrapper-padding-box c-n2ntoy soui-cascader-wrapper-inner-title-top cwvq5f6 soui-cascader-wrapper-inner-title-bottom"
    >
      <div
        class="cxvfwnf soui-cascader-result"
      >
        <div
          class="c-el9d9h soui-cascader-result-text-wrapper ceh4deg soui-cascader-multiple-result-wrapper"
        >
          <input
            autocomplete="off"
            placeholder="Please select city"
            style="width: 100%;"
            value=""
          />
          <span
            class="c-thjy85 soui-cascader-input-mirror"
          />
        </div>
      </div>
      <div
        class="c-5m72ok soui-cascader-icon-wrapper"
      >
        <span
          class="c-yf43w soui-cascader-arrow-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
